--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-toastify": "^11.0.3",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar": "^4.0.0",
     "zustand": "^5.0.3"
